Heading spacing fixes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,15 @@ p {
     font-size: 110%;
 }
 
+h1 small {
+    margin-left: 6px;
+}
+
+h2 small {
+    font-size: 16px;
+    margin-left: 6px;
+}
+
 .btn {
   padding: 5px 14px 6px;
   color:#333;
